findbar visibility fix

--- a/userChrome.css
+++ b/userChrome.css
@@ -168,41 +168,6 @@
 /* END Tabs close button: hidden by default */
 
 
-/* Compact findbar at the top of the window — Contributor(s): Madis0 */
-  .browserContainer > findbar {
-    display: inline-block;
-    -moz-box-ordinal-group: 0;
-    position: fixed !important;
-    right: 1em;
-    border-bottom-right-radius: var(--toolbarbutton-border-radius);
-    border-bottom-left-radius: var(--toolbarbutton-border-radius);
-    padding-inline-start: 8px;
-    background: var(--arrowpanel-background) !important;
-    box-shadow: 0 2px 10px -4px var(--arrowpanel-background);
-
-    /* Hide the "border" at the top by removing background-image */
-    border-top: none !important;
-    background-image: none !important;
-
-    /* Uncomment to add a transition from the top */
-    transition: var(--toolbarbutton-hover-transition-duration) !important;
-    z-index: 0 !important;
-
-  }
-
-  /* Margin from top when hidden (necessary for the transition to work) */
-  findbar[hidden]{ margin-top: -4px !important; }
-
-  /* Aligns the close button to the center */
-  .findbar-closebutton {
-    margin-inline-start: 0.5em !important;
-    vertical-align: middle !important;
-    margin-bottom: 0.25em !important;
-    height: inherit !important;
-  }
-/* Compact findbar END */
-
-
 /* KEYMASTERR */
   #pageActionButton,
   #page-action-buttons #pageActionSeparator
